# sql-inspect

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  pyproject.toml  sql-inspect.toml.example
.github/workflows/: audit.yml  ci.yml  release.yml
examples/: pr_demo.sql  query.sql
packaging/homebrew/: querylens.rb
scripts/: smoke-test.sh
src/: analyzer.rs  config.rs  cost.rs  error.rs  insights.rs  lib.rs  main.rs  prompt.rs
src/providers/: bedrock.rs  mod.rs  openai.rs
tests/: provider_contract.rs
