[package]
name = "sql-inspect"
version = "0.1.5"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[features]
default = ["openai", "local"]
openai = []
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]
local = []

[dependencies.aws-config]
version = "1"
optional = true

[dependencies.aws-sdk-bedrockruntime]
version = "1"
optional = true
