[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sql-inspect"
version = "0.1.8"
description = "SQL inspection CLI: static checks, lineage, PR review, cost diff"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Maria Dubyaga", email = "kraftaa@gmail.com" }
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true

[project.urls]
Homepage = "https://github.com/kraftaa/sql-inspect"
Repository = "https://github.com/kraftaa/sql-inspect"
